# ai-hackathon-lighthouse-agent

./: README.md
oc-commands-analyzer-agent/: .env.example  .gitignore  README.md  pyproject.toml
oc-commands-analyzer-agent/oc_commands_analyzer_agent/: __init__.py
oc-commands-analyzer-agent/oc_commands_analyzer_agent/src/: api.py  main.py  settings.py
oc-commands-analyzer-agent/oc_commands_analyzer_agent/src/core/: __init__.py  agent.py  prompt.py
oc-commands-analyzer-agent/oc_commands_analyzer_agent/src/routes/: health.py  stream.py
oc-commands-analyzer-agent/oc_commands_analyzer_agent/utils/: pylogger.py
oc-commands-analyzer-agent/tests/: __init__.py
oc-commands-analyzer-mcp-server/: .env.example  README.md  pyproject.toml
oc-commands-analyzer-mcp-server/oc_commands_analyzer_mcp_server/: __init__.py
oc-commands-analyzer-mcp-server/oc_commands_analyzer_mcp_server/src/: __init__.py  api.py  main.py  mcp.py  settings.py
oc-commands-analyzer-mcp-server/oc_commands_analyzer_mcp_server/src/tools/: __init__.py  oc_analyzer_tool.py
oc-commands-analyzer-mcp-server/oc_commands_analyzer_mcp_server/utils/: __init__.py
oc-commands-analyzer-mcp-server/tests/: __init__.py
